--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "illuminate/database": "^11.35",
+        "illuminate/database": "*",
         "doctrine/dbal": "^4.2",
         "ramsey/uuid": "^4.7"
     },
