--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     container_name: nur-app
     restart: always
     depends_on:
-      - nur-db
+      nur-db:
+        condition: service_healthy
     environment:
       DB_CONNECTION: mysql
       DB_HOST: nur-db
@@ -18,7 +19,8 @@ services:
       DB_PASSWORD: Lm12345
     networks:
       - nur-network
-
+    command: ["/bin/sh", "-c", "php migrate.php && apache2-foreground"]
+    #Primero ejecuta php migrate.php para crear las tablas. Luego arranca Apache con apache2-foreground para que el contenedor siga ejecutándose
   nur-db:
     image: mysql:8.0
     container_name: nur-db
@@ -29,11 +31,16 @@ services:
       MYSQL_USER: pablo
       MYSQL_PASSWORD: Lm12345
     ports:
-      - "3307:3306"
+      - 3307:3306
     networks:
       - nur-network
     volumes:
       - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 5
+      start_period: 20s
 
 networks:
   nur-network:
