Presentación final de todos los archivos de docker-compose
Presentación final de todos los archivos de docker-compose

--- a/docker-compose-con-dockfile.yml
+++ b/docker-compose-con-dockfile.yml
@@ -1,6 +1,8 @@
 services:
   nur-app:
-    image: wendermendez/nutrinur:2.0
+    build:
+      context: .
+      dockerfile: dockerfile
     ports:
       - 8081:80
     container_name: nur-app
