--- a/team-compose/carlos/docker-compose.yml
+++ b/team-compose/carlos/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: abc12345
       POSTGRES_DB: contracting
     ports:
-      - "5433:5432"
+      - 5433:5432
 
   contracting-app:
     image: carlosclavijo/contracting-app:latest
@@ -18,8 +18,14 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=database;Port=5432;Database=contracting;Username=postgres;Password=abc12345
     ports:
-      - "8080:8080"
+      - 8080:8080
+    networks:
+      - nutritional-network 
     depends_on:
       - database
+      
+networks:
+  nutritional-network:
+    driver: bridge
   
   
