--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Fix Pest permissions
+      run: chmod +x ./vendor/bin/pest
+
     - name: Run Pest tests
       run: ./vendor/bin/pest ./tests/Unit
 
