--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -36,7 +36,7 @@ jobs:
       run: chmod +x ./vendor/bin/pest
 
     - name: Run Pest tests
-      run: php ./vendor/bin/pest ./tests/Unit
+      run: php ./vendor/bin/pest --cache-directory=./tests/Unit/.pest-cache ./tests/Unit
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
