--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -32,7 +32,9 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
     - name: Fix Pest permissions
-      run: chmod 777 ./vendor/bin/pest
+      run: chmod +x ./vendor/bin/pest
+    - name: Fix Pest cache permissions
+      run: chmod 777 -R ./vendor/pestphp/pest
 
     - name: Run Pest tests
       run: php ./vendor/bin/pest --do-not-cache-result --no-results --no-output ./tests/Unit
