--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,10 +34,10 @@ jobs:
     - name: Fix Pest permissions
       run: chmod +x ./vendor/bin/pest
     - name: Fix Pest cache permissions
-      run: chmod 777 -R ./vendor/pestphp/pest
+      run: chmod 777 -R ./tests/Unit/pest-cache
 
     - name: Run Pest tests
-      run: php ./vendor/bin/pest --do-not-cache-result --no-results --no-output ./tests/Unit
+      run: php ./vendor/bin/pest --cache-directory ./tests/Unit/pest-cache ./tests/Unit
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
