--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,8 +1,8 @@
 name: PHP Composer
 
 on:
-  #push:
-    #branches: [ "develop" ]
+  push:
+    branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
 
