--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "*.php": ["./vendor/bin/php-cs-fixer fix", "git add"]
+    "*.php": ".\\vendor\\bin\\php-cs-fixer fix --quiet"
+
   }
 }
