--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
     - name: Fix Pest permissions
-      run: chmod +x ./vendor/bin/pest
+      run: chmod +x ./vendor/bin/phpunit
     - name: Run test suite
       run: composer run-script test
 
