--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         }
     },
 	"scripts": {
-		"test": "vendor/bin/pest ./tests/Unit --ci"
+		"test": "vendor/bin/pest --ci --coverage-xml tests/Unit/cobertura-xml"
+
 	}
 }
