--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: PHP Composer
+name: CI workflow NutriNUR
 
 on:
   push:
@@ -29,6 +29,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
 
+    - name: Setup PHP with Xdebug
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.2'
+        coverage: xdebug
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
     - name: Fix PHPUnit permissions
@@ -37,6 +42,10 @@ jobs:
       run: chmod +x ./vendor/bin/pest
     - name: Run test suite
       run: composer run-script test 
+    - name: SonarQube Scan
+      uses: SonarSource/sonarqube-scan-action@v5
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
