--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,12 @@
 name: CI workflow NutriNUR
 
 on:
-  push:
-    branches: [ "develop" ]
+  #push:
+  #  branches: [ "develop" ]
+  #pull_request:
+  #  branches: [ "develop" ]
   pull_request:
-    branches: [ "develop" ]
+    types: [opened, review_requested]
 
 permissions:
   contents: read
