--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "illuminate/database": "*",
         "doctrine/dbal": "^4.2",
-        "ramsey/uuid": "^4.7"
+        "ramsey/uuid": "^4.7",
+        "sentry/sentry": "^4.11"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
