--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     "require": {
         "illuminate/database": "*",
         "doctrine/dbal": "^4.2",
-        "ramsey/uuid": "^4.7",
-        "sentry/sentry": "^4.11"
+        "ramsey/uuid": "^4.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
