--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=bndr88_ms2024-nur
 sonar.organization=bndr88
+sonar.qualitygate.wait=false
 sonar.php.coverage.reportPaths=tests/Unit/cobertura-xml/coverage.xml
 
 
