--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         }
     },
 	"scripts": {
-		"test": "vendor/bin/pest --ci --coverage-xml tests/Unit/cobertura-xml"
+		"test": "vendor/bin/pest --ci --coverage-clover tests/Unit/cobertura-xml"
 
 	}
 }
