--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
 sonar.projectKey=bndr88_ms2024-nur
 sonar.organization=bndr88
 sonar.qualitygate.wait=true
-sonar.php.coverage.reportPaths=tests/Unit/cobertura-xml/coverage.xml
+sonar.php.coverage.reportPaths=tests/Unit/cobertura-xml/
+
 
 
 # This is the name and version displayed in the SonarCloud UI.
