--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=bndr88_ms2024-nur
 sonar.organization=bndr88
 sonar.qualitygate.wait=true
-sonar.php.coverage.reportPaths=tests/Unit/cobertura-xml/cobertura2.xml
+sonar.php.coverage.reportPaths=cobertura2.xml
 #sonar.php.coverage.reportPaths=tests/Unit/cobertura-xml/cobertura.xml
 
 
