--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         }
     },
 	"scripts": {
-		"test": "vendor/bin/pest --ci --coverage-xml tests/Unit/cobertura-xml"
+		"test": "vendor/bin/pest --coverage --coverage-clover=coverage.xml"
 
 	}
 }
