--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=bndr88_ms2024-nur
 sonar.organization=bndr88
-sonar.php.coverage.reportPaths=coverage.xml
+sonar.php.coverage.reportPaths=./tests/Unit/coverage.xml
 
 
 # This is the name and version displayed in the SonarCloud UI.
