--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         }
     },
 	"scripts": {
-		"test": "vendor/bin/pest --coverage --coverage-clover=coverage.xml"
+		"test": "vendor/bin/pest --coverage --coverage-clover tests/Unit/coverage.xml"
 
 	}
 }
