--- a/docker-compose-con-dockfile.yml
+++ b/docker-compose-con-dockfile.yml
@@ -10,8 +10,8 @@ services:
     depends_on:
       nur-db:
         condition: service_healthy
-      nur-consumidor:
-        condition: service_healthy
+    #   nur-consumidor:
+    #     condition: service_healthy
     environment:
       DB_CONNECTION: mysql
       DB_HOST: nur-db
@@ -44,19 +44,19 @@ services:
       retries: 5
       start_period: 20s
 
-  nur-consumidor:
-    build:
-      context: ./consumidor
-    container_name: nur-consumidor
-    networks:
-      - nur-network
-    depends_on:
-      - nur-db
-    healthcheck:
-      test: ["CMD-SHELL", "php -r 'exit(0);'"]
-      interval: 10s
-      retries: 3
-      start_period: 5s
+#   nur-consumidor:
+#     build:
+#       context: ./consumidor
+#     container_name: nur-consumidor
+#     networks:
+#       - nur-network
+#     depends_on:
+#       - nur-db
+#     healthcheck:
+#       test: ["CMD-SHELL", "php -r 'exit(0);'"]
+#       interval: 10s
+#       retries: 3
+#       start_period: 5s
 
 networks:
   nur-network:
