--- a/docker-compose-con-dockfile.yml
+++ b/docker-compose-con-dockfile.yml
@@ -10,7 +10,8 @@ services:
     container_name: nur-app
     restart: always
     depends_on:
-      - nur-db
+      nur-db:
+        condition: service_healthy
     environment:
       DB_CONNECTION: mysql
       DB_HOST: nur-db
@@ -43,6 +44,11 @@ services:
       - nur-network
     volumes:
       - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-pLm12345"]
+      interval: 10s
+      retries: 5
+      start_period: 20s
 
   nur-consumidor:
     build:
@@ -55,12 +61,39 @@ services:
     networks:
       - nur-network
     depends_on:
-      - nur-app
+      nur-db:
+        condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "php -r 'exit(0);'"]
       interval: 10s
       retries: 3
       start_period: 5s
+
+  outbox-publisher:
+    build:
+      context: ./src/Infraestructura/Publicador
+      dockerfile: Dockerfile
+    container_name: outbox-publisher
+    restart: always
+    volumes:
+      - .:/app
+    working_dir: /app/src/Infraestructura/Publicador
+    networks:
+      - nur-network
+    depends_on:
+      nur-db:
+        condition: service_healthy
+    environment:
+      DB_CONNECTION: mysql
+      DB_HOST: nur-db
+      DB_PORT: 3306
+      DB_DATABASE: nutrinur2
+      DB_USERNAME: pablo
+      DB_PASSWORD: Lm12345
+      RABBITMQ_HOST: host.docker.internal
+      RABBITMQ_PORT: 5672
+      RABBITMQ_USER: storeUser
+      RABBITMQ_PASSWORD: storeUserPassword
 
 networks:
   nur-network:
