--- a/src/Infraestructura/Publicador/composer.json
+++ b/src/Infraestructura/Publicador/composer.json
@@ -1,7 +1,6 @@
 {
   "require": {
-    "php-amqplib/php-amqplib": "^3.2",
-    "vlucas/phpdotenv": "^5.5"
+    "php-amqplib/php-amqplib": "^3.2"
   },
   "autoload": {
     "psr-4": {
