--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "illuminate/database": "*",
         "doctrine/dbal": "^4.2",
         "ramsey/uuid": "^4.7",
-        "php-amqplib/php-amqplib": "^3.7"
+        "php-amqplib/php-amqplib": "^3.7",
+        "phpseclib/phpseclib": "3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
