--- a/docker-compose-con-dockfile.yml
+++ b/docker-compose-con-dockfile.yml
@@ -55,6 +55,7 @@ services:
       context: src/Infraestructura/Consumidor
       dockerfile: Dockerfile
     container_name: nur-consumidor
+    restart: always
     volumes:
       - .:/app
     working_dir: /app/src/Infraestructura/Consumidor
