--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 services:
   nur-app:
-    image: wendermendez/nutrinur:2.0
+    image: wendermendez/nutrinur:3.0
     ports:
       - 8081:80
+    volumes:
+      - .:/app
     container_name: nur-app
     restart: always
     depends_on:
@@ -12,20 +14,26 @@ services:
       DB_CONNECTION: mysql
       DB_HOST: nur-db
       DB_PORT: 3307
-      DB_DATABASE: nutrinur
+      DB_DATABASE: nutrinur2
       DB_USERNAME: pablo
       DB_PASSWORD: Lm12345
     networks:
       - nur-network
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost || exit 1"]
+      interval: 10s
+      retries: 3
+      start_period: 30s
     command: ["/bin/sh", "-c", "php migrate.php && apache2-foreground"]
     #Primero ejecuta php migrate.php para crear las tablas. Luego arranca Apache con apache2-foreground para que el contenedor siga ejecutándose
+
   nur-db:
     image: mysql:8.0
     container_name: nur-db
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: Lm12345
-      MYSQL_DATABASE: nutrinur
+      MYSQL_DATABASE: nutrinur2
       MYSQL_USER: pablo
       MYSQL_PASSWORD: Lm12345
     ports:
@@ -39,6 +47,48 @@ services:
       interval: 10s
       retries: 5
       start_period: 20s
+
+  nur-consumidor:
+    image: wendermendez/nutrinur-consumidor:1.0
+    container_name: nur-consumidor
+    restart: always
+    volumes:
+      - .:/app
+    working_dir: /app/src/Infraestructura/Consumidor
+    networks:
+      - nur-network
+    depends_on:
+      nur-db:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "php -r 'exit(0);'"]
+      interval: 10s
+      retries: 3
+      start_period: 5s
+
+  outbox-publisher:
+    image: wendermendez/nutrinur-publicador:1.0
+    container_name: outbox-publisher
+    restart: always
+    volumes:
+      - .:/app
+    working_dir: /app/src/Infraestructura/Publicador
+    networks:
+      - nur-network
+    depends_on:
+      nur-db:
+        condition: service_healthy
+    environment:
+      DB_CONNECTION: mysql
+      DB_HOST: nur-db
+      DB_PORT: 3306
+      DB_DATABASE: nutrinur2
+      DB_USERNAME: pablo
+      DB_PASSWORD: Lm12345
+      RABBITMQ_HOST: host.docker.internal
+      RABBITMQ_PORT: 5672
+      RABBITMQ_USER: storeUser
+      RABBITMQ_PASSWORD: storeUserPassword
 
 networks:
   nur-network:
